--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "movie_rating_project_solution",
   "version": "1.0.0",
-  "description": "",
+  "description": "![logo](https://user-images.githubusercontent.com/44912347/202296600-c5f247d6-9616-49db-88f0-38433429d781.jpg)",
   "main": "db.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,8 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2",
+    "express-validator": "^6.14.2",
     "nodemon": "^2.0.15",
     "sequelize": "^6.21.4",
     "sqlite3": "^5.0.11"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kristina-gorin/movie-theater-api.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/kristina-gorin/movie-theater-api/issues"
+  },
+  "homepage": "https://github.com/kristina-gorin/movie-theater-api#readme"
 }
